# News-RAG

./: .gitignore  README.md  dashboard.py  pyproject.toml  test_llm.py
config/: filters.yml  sources.yml
src/newsrag/: __init__.py  __main__.py  brief_builder.py  cli.py  config_loader.py  fetcher.py  filtering.py  llm_engine.py  parser.py  ranking.py  search.py  source_info.py  storage.py  verification.py
src/newsrag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
