[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newsrag"
version = "0.1.0"
description = "Defense News RAG – daily intelligence brief generator"
requires-python = ">=3.10"
dependencies = [
    "feedparser>=6.0",
    "requests>=2.31",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "streamlit>=1.30",
]

[project.optional-dependencies]
extract = ["newspaper4k>=0.9"]
llm = ["llama-cpp-python>=0.2", "sentence-transformers>=2.2"]

[tool.setuptools.packages.find]
where = ["src"]
